--- a/index.html
+++ b/index.html
@@ -1,63 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/main.css">
-		<link href='https://fonts.googleapis.com/css?family=Sancreek' rel='stylesheet' type='text/css'>
-		<title>Tombestone Memory Game</title>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/main.css">
+	<link href='https://fonts.googleapis.com/css?family=Sancreek' rel='stylesheet' type='text/css'>
+	<title>Document</title>
+</head>
 
-<body>
-	<div class="container">
-		<div class="square" id="one"><img class="docHollidayA" src="img/docHollidayA.jpg"></div>
-		
-		<div class="square" id="two"><img class="josephineA" src="img/josephineA.jpg"></div>
-		
-		<div class="square" id="three"><img class="billyTheKidA" src="img/billyTheKidA.jpg"></div>
-		
-		<div class="square" id="four"><img class="wyattEarpA" src="img/wyattEarpA.jpg"></div>
-		
-		<div class="square" id="five"><img class="madameMustacheA" src="img/madameMustacheA.jpg"></div>
-		
-		<div class="square" id="six"><img class="batMastersonA" src="img/batMastersonA.jpg"></div>
-		
-		<div class="square" id="seven"><img class="jesseJamesA" src="img/jesseJamesA.jpg"></div>
-		
-		<div class="square" id="eight"><img class="bonnieAndClydeA" src="img/bonnieAndClydeA.jpg"></div>
-		
-		<div class="square" id="nine"><img class="buffaloBillA" src="img/buffaloBillA.jpg"></div>
-		
-		<div class="square" id="ten"><img class="butchCassidyA" src="img/butchCassidyA.jpg"></div>
-		
-		<div class="square" id="eleven"><img class="butchCassidyB" src="img/butchCassidyB.jpg"></div>
-		
-		<div class="square" id="twelve"><img class="wyattEarpB" src="img/wyattEarpB.jpg"></div>
-		
-		<div class="square" id="thirteen"><img class="madameMustacheB" src="img/madameMustacheB.jpg"></div>
-		
-		<div class="square" id="fourteen"><img class="batMastersonB" src="img/batMastersonB.jpg"></div>
-		
-		<div class="square" id="fifteen"><img class="josephineB" src="img/josephineB.jpg"></div>
-		
-		<div class="square" id="sixteen"><img class="buffaloBillB" src="img/buffaloBillB.jpg"></div>
-		
-		<div class="square" id="seventeen"><img class="bonnieAndClydeB" src="img/bonnieAndClydeB.jpg"></div>
-		
-		<div class="square" id="eighteen"><img class="jesseJamesB" src="img/jesseJamesB.jpg"></div>
-		
-		<div class="square" id="nineteen"><img class="docHollidayB" src="img/docHollidayB.jpg"></div>
-		
-		<div class="square" id="twenty"><img class="billyTheKidB" src="img/billyTheKidB.jpg"></div>
-		
-		<div class="docHollidayText"><p>Doc Holliday</p></div>
-		<div class="josephineText"><p>Josephine</p></div>
-		<div class="billyTheKidText"><p>Billy The Kid</p></div>
+	<body>
 
-	</div>
+		<table>
+			<tr>
+				<td><a href="javascript:choose(0)"><img src="img/wanted.jpg" width=100 height=100></a> </td> 
+				<td><a href="javascript:choose(1)"><img src="img/wanted.jpg" width=100 height=100></a> </td>  
+			</tr> 
+			<tr>
+				<td><a href="javascript:choose(2)"><img src="img/wanted.jpg" width=100 height=100></a> </td>   
+				<td><a href="javascript:choose(3)"><img src="img/wanted.jpg" width=100 height=100></a> </td> 
+			</tr>
+			<tr>
+				<td><a href="javascript:choose(4)"><img src="img/wanted.jpg" width=100 height=100></a> </td>  
+				<td><a href="javascript:choose(5)"><img src="img/wanted.jpg" width=100 height=100></a> </td>  
+			</tr>
+		</table>
 
-	  <audio id="noise" src="sounds/shotgun.mp3"></audio>
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="js/main.js"></script>
-</body>
 
+			<div id="controls">
+				<p class="neon-text1" id="output">00:00:00</p>
+				<p class="neon-text1" id="output2">00:00:00</p>
+
+			</div>
+		
+			<audio id="noiseone" src="sounds/shotgun1.mp3"></audio>
+			<audio id="noisetwo" src="sounds/shotgun2.mp3"></audio>
+	
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="js/main.js"></script>
+
+	</body>
 </html>
