uploaded the timers

--- a/index.html
+++ b/index.html
@@ -8,34 +8,67 @@
 </head>
 
 	<body>
+		<div class="container">
+			<table>
+				<tr>
+					<td></td>
+					<td><a href="javascript:choose(0)"><img src="img/wanted.jpg"></a> </td> 
+					<td><a href="javascript:choose(1)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(2)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(3)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(4)"><img src="img/wanted.jpg"></a> </td>  
+				</tr> 
+				<tr>
+					<td></td>
+					<td><a href="javascript:choose(5)"><img src="img/wanted.jpg"></a> </td>   
+					<td><a href="javascript:choose(6)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(7)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(8)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(9)"><img src="img/wanted.jpg"></a> </td> 
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td><a href="javascript:choose(10)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(11)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(12)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(13)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(14)"><img src="img/wanted.jpg"></a> </td> 
+				</tr>
+				<tr>
+					<td>	
+						<div id="timerContainer1">
+							<div id="timer1">
+								<h1 id="playerOneText">Player 1</h1>
+								<p id="output1">0:0 Sec</p>
+							</div>
+						</div>
+					</td>   
+					<td><a href="javascript:choose(15)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(16)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(17)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(18)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(19)"><img src="img/wanted.jpg"></a> </td>  
+					<td>
+						<div id="timerContainer2">
+							<div id="timer2">
+								<h1 id="playerTwoText">Player 2</h1>
+								<p id="output2">0:0 Sec</p>
+							</div>
+						</div>
+					</td>
+				</tr>
+			</table>
+		</div>
 
-		<table>
-			<tr>
-				<td><a href="javascript:choose(0)"><img src="img/wanted.jpg" width=100 height=100></a> </td> 
-				<td><a href="javascript:choose(1)"><img src="img/wanted.jpg" width=100 height=100></a> </td>  
-			</tr> 
-			<tr>
-				<td><a href="javascript:choose(2)"><img src="img/wanted.jpg" width=100 height=100></a> </td>   
-				<td><a href="javascript:choose(3)"><img src="img/wanted.jpg" width=100 height=100></a> </td> 
-			</tr>
-			<tr>
-				<td><a href="javascript:choose(4)"><img src="img/wanted.jpg" width=100 height=100></a> </td>  
-				<td><a href="javascript:choose(5)"><img src="img/wanted.jpg" width=100 height=100></a> </td>  
-			</tr>
-		</table>
 
+				
 
-			<div id="controls">
-				<p class="neon-text1" id="output">00:00:00</p>
-				<p class="neon-text1" id="output2">00:00:00</p>
-
-			</div>
-		
+			
 			<audio id="noiseone" src="sounds/shotgun1.mp3"></audio>
 			<audio id="noisetwo" src="sounds/shotgun2.mp3"></audio>
-	
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="js/main.js"></script>
 
+			<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+			<script src="js/main.js"></script>
 	</body>
 </html>
