--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Sancreek' rel='stylesheet' type='text/css'>
 	<title>Document</title>
 </head>
-
 	<body>
+		<div class="containerIntro">
+		</div>
 		<div class="container">
 			<table>
 				<tr>
