uploaded gallery of all the people

--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Sancreek' rel='stylesheet' type='text/css'>
-	<title>Document</title>
+	<link href='https://fonts.googleapis.com/css?family=Kadwa' rel='stylesheet' type='text/css'>
 </head>
 	<body>
+
 		<div class="containerIntro">
 		</div>
+
+		<div class="containerInstruc">
+			<h3>
+				Wanted: Dead or Alive, is a timed 2 player memory game that involves<br> the matching of the most famous lawmen/outlaws in the history of the <br>American West.
+				<br><br>
+				The game is timed, and the player who matches the entire board in the<br> fastest time wins!
+			</h3>
+		</div>
+
+		<div class="containerPeople">
+			<table>
+				<tr>
+					<td><div id="buffaloBill"></div><h4>Buffalo Bill</h4></td>
+					<td><div id="billyTheKid"></div><h4>Billy The Kid</h4></td>
+					<td><div id="josephine"></div><h4>Josephine</h4></td>
+					<td><div id="docHolliday"></div><h4>Doc Holliday</h4></td>
+					<td><div id="wyattEarp"></div><h4>Wyatt Earp</h4></td>
+				</tr>
+				<tr>
+					<td><div id="madameMustache"></div><h4>Madame Mustache</h4></td>
+					<td><div id="butchCassidy"></div><h4>Butch Cassidy</h4></td>
+					<td><div id="bonnieAndClyde"></div><h4>Bonnie And Clyde</h4></td>
+					<td><div id="batMasterson"></div><h4>Bat Masterson</h4></td>
+					<td><div id="jesseJames"></div><h4>Jesse James</h4></td>
+				</tr>
+			</table>
+		</div>
+
 		<div class="container">
 			<table>
 				<tr>
