added final score features, working

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<h3>
 				Wanted: Dead or Alive, is a timed 2 player memory game that involves<br> the matching of the most famous lawmen/outlaws in the history of the <br>American West.
 				<br><br>
-				The game is timed, and the player who matches the entire board in the<br> fastest time wins!
+				The game is timed and will begin when you click on the cards.  The<br>player who matches the entire board in the fastest time wins!
+				<br></br>
 			</h3>
 		</div>
 
@@ -91,10 +92,23 @@
 			</table>
 		</div>
 
+		
+		<div class="containerOneWins">
+			<div class="oneWinsPartOne">
+			</div>
+			<h2>Congratulations Player 1!  You survived the shootout and won!</h2>
+		</div>
+		
+<!-- 		<div class="oneWinsPart2"><h3>Sorry player 2, your memory was too slow and you couldn't draw your weapon in time</h3>
+		</div>
+		
+		<div class="twoWinsPart1"><h3>Congratulations player 2!  You survived the shootout and lived to tell about it!</h3>
+		</div>
+		
+		<div class="twoWinsPart2"><h3>Sorry player 1, your memory was too slow and you couldn't draw your weapon in time</h3>
+		</div>
+ -->
 
-				
-
-			
 			<audio id="noiseone" src="sounds/shotgun1.mp3"></audio>
 			<audio id="noisetwo" src="sounds/shotgun2.mp3"></audio>
 
