added final images

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 		<div class="containerInstruc">
 			<h3>
-				Wanted: Dead or Alive, is a timed 2 player memory game that involves<br> the matching of the most famous lawmen/outlaws in the history of the <br>American West.
+				Wanted: Dead or Alive, is a 2 player memory game that involves the<br>matching of the most famous lawmen/outlaws in the history of the <br>American West.
 				<br><br>
-				The game is timed and will begin when you click on the cards.  The<br>player who matches the entire board in the fastest time wins!
+				The game is timed and will begin when you click on the cards.  The<br>player who matches the entire board with the fastest time wins!
 				<br></br>
 			</h3>
 		</div>
@@ -37,6 +37,12 @@
 					<td><div id="jesseJames"></div><h4>Jesse James</h4></td>
 				</tr>
 			</table>
+		</div>
+
+		<div class="containerHell">
+				<div class="kurtRussell">
+				</div>
+					<h5>YOU TELL’EM I’M COMIN’ AND HELL’S COMIN’ WITH ME!</h5>
 		</div>
 
 		<div class="container">
@@ -93,21 +99,30 @@
 		</div>
 
 		
-		<div class="containerOneWins">
-			<div class="oneWinsPartOne">
-			</div>
-			<h2>Congratulations Player 1!  You survived the shootout and won!</h2>
+		<div class="containerOneWinsPartOne">
+				<div class="oneWinsPartOne">
+				</div>
+					<h2>Congratulations Player 1!  You survived the shootout and won!</h2>
 		</div>
 		
-<!-- 		<div class="oneWinsPart2"><h3>Sorry player 2, your memory was too slow and you couldn't draw your weapon in time</h3>
+		<div class="containerOneWinsPartTwo">
+				<div class="oneWinsPartTwo">
+				</div>
+					<h2>Sorry Player 2, your memory was too slow and you couldn't draw your weapon in time.</h2>
+		</div>
+
+		<div class="containerTwoWinsPartOne">
+				<div class="twoWinsPartOne">
+				</div>
+					<h2>Congratulations Player 2!  You survived the shootout and won!</h2>
 		</div>
 		
-		<div class="twoWinsPart1"><h3>Congratulations player 2!  You survived the shootout and lived to tell about it!</h3>
+		<div class="containerTwoWinsPartTwo">
+				<div class="twoWinsPartTwo">
+				</div>
+					<h2>Sorry Player 1, your memory was too slow and you couldn't draw your weapon in time.</h2>
 		</div>
 		
-		<div class="twoWinsPart2"><h3>Sorry player 1, your memory was too slow and you couldn't draw your weapon in time</h3>
-		</div>
- -->
 
 			<audio id="noiseone" src="sounds/shotgun1.mp3"></audio>
 			<audio id="noisetwo" src="sounds/shotgun2.mp3"></audio>
