final touches and jquery

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="containerHell">
 				<div class="kurtRussell">
 				</div>
-					<h5>YOU TELL’EM I’M COMIN’ AND HELL’S COMIN’ WITH ME!</h5>
+					<h5>YOU  TELL’EM  I’M  COMIN’,  AND HELL’S  COMIN’  WITH  ME!!!</h5>
 		</div>
 
 		<div class="container">
