added replay button

--- a/index.html
+++ b/index.html
@@ -49,43 +49,43 @@
 			<table>
 				<tr>
 					<td></td>
-					<td><a href="javascript:choose(0)"><img src="img/wanted.jpg"></a> </td> 
+					<td><a href="javascript:choose(0)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(1)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(2)"><img src="img/wanted.jpg"></a> </td>
-					<td><a href="javascript:choose(3)"><img src="img/wanted.jpg"></a> </td>  
-					<td><a href="javascript:choose(4)"><img src="img/wanted.jpg"></a> </td>  
-				</tr> 
+					<td><a href="javascript:choose(3)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(4)"><img src="img/wanted.jpg"></a> </td>
+				</tr>
 				<tr>
 					<td></td>
-					<td><a href="javascript:choose(5)"><img src="img/wanted.jpg"></a> </td>   
+					<td><a href="javascript:choose(5)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(6)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(7)"><img src="img/wanted.jpg"></a> </td>
-					<td><a href="javascript:choose(8)"><img src="img/wanted.jpg"></a> </td>  
-					<td><a href="javascript:choose(9)"><img src="img/wanted.jpg"></a> </td> 
+					<td><a href="javascript:choose(8)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(9)"><img src="img/wanted.jpg"></a> </td>
 					<td></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="javascript:choose(10)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(10)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(11)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(12)"><img src="img/wanted.jpg"></a> </td>
-					<td><a href="javascript:choose(13)"><img src="img/wanted.jpg"></a> </td>  
-					<td><a href="javascript:choose(14)"><img src="img/wanted.jpg"></a> </td> 
+					<td><a href="javascript:choose(13)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(14)"><img src="img/wanted.jpg"></a> </td>
 				</tr>
 				<tr>
-					<td>	
+					<td>
 						<div id="timerContainer1">
 							<div id="timer1">
 								<h1 id="playerOneText">Player 1</h1>
 								<p id="output1">0:0 Sec</p>
 							</div>
 						</div>
-					</td>   
-					<td><a href="javascript:choose(15)"><img src="img/wanted.jpg"></a> </td>  
+					</td>
+					<td><a href="javascript:choose(15)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(16)"><img src="img/wanted.jpg"></a> </td>
 					<td><a href="javascript:choose(17)"><img src="img/wanted.jpg"></a> </td>
-					<td><a href="javascript:choose(18)"><img src="img/wanted.jpg"></a> </td>  
-					<td><a href="javascript:choose(19)"><img src="img/wanted.jpg"></a> </td>  
+					<td><a href="javascript:choose(18)"><img src="img/wanted.jpg"></a> </td>
+					<td><a href="javascript:choose(19)"><img src="img/wanted.jpg"></a> </td>
 					<td>
 						<div id="timerContainer2">
 							<div id="timer2">
@@ -98,17 +98,18 @@
 			</table>
 		</div>
 
-		
+
 		<div class="containerOneWinsPartOne">
 				<div class="oneWinsPartOne">
 				</div>
 					<h2>Congratulations Player 1!  You survived the shootout and won!</h2>
 		</div>
-		
+
 		<div class="containerOneWinsPartTwo">
 				<div class="oneWinsPartTwo">
 				</div>
 					<h2>Sorry Player 2, your memory was too slow and you couldn't draw your weapon in time.</h2>
+					<a class="play-again" href="http://ansel291.github.io/Project_1/">Play Again</a>
 		</div>
 
 		<div class="containerTwoWinsPartOne">
@@ -116,13 +117,14 @@
 				</div>
 					<h2>Congratulations Player 2!  You survived the shootout and won!</h2>
 		</div>
-		
+
 		<div class="containerTwoWinsPartTwo">
 				<div class="twoWinsPartTwo">
 				</div>
 					<h2>Sorry Player 1, your memory was too slow and you couldn't draw your weapon in time.</h2>
+					<a class="play-again" href="http://ansel291.github.io/Project_1/">Play Again</a>
 		</div>
-		
+
 
 			<audio id="noiseone" src="sounds/shotgun1.mp3"></audio>
 			<audio id="noisetwo" src="sounds/shotgun2.mp3"></audio>
