--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 
 		<div class="containerIntro">
+			<h1 class="wanted-headline">Wanted: Dead or Alive</h1>
 		</div>
 
 		<div class="containerInstruc">
