--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 	<body>
 
+		<h1>Wanted: Dead or Alive</h1>
+
 		<div class="containerIntro">
-			<h1 class="wanted-headline">Wanted: Dead or Alive</h1>
 		</div>
 
 		<div class="containerInstruc">
