removed play again button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<div class="containerIntro">
-			<h1 class="wanted-headline">Wanted: Dead or Alive</h1>
+
 		</div>
 
 		<div class="containerInstruc">
@@ -110,7 +110,7 @@
 				<div class="oneWinsPartTwo">
 				</div>
 					<h2>Sorry Player 2, your memory was too slow and you couldn't draw your weapon in time.</h2>
-					<a class="play-again" href="http://ansel291.github.io/Project_1/">Play Again</a>
+					<!-- <a class="play-again" href="http://ansel291.github.io/Project_1/">Play Again</a> -->
 		</div>
 
 		<div class="containerTwoWinsPartOne">
@@ -123,7 +123,7 @@
 				<div class="twoWinsPartTwo">
 				</div>
 					<h2>Sorry Player 1, your memory was too slow and you couldn't draw your weapon in time.</h2>
-					<a class="play-again" href="http://ansel291.github.io/Project_1/">Play Again</a>
+					<!-- <a class="play-again" href="http://ansel291.github.io/Project_1/">Play Again</a> -->
 		</div>
 
 
